[package]
name = "firestrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tokio-context = "0.1.3"
maelstrom-node="0.1.6"
async-trait = "0.1.68"
uuid = { version = "1.4.1", features = ["serde", "v4"] }